--- a/bruks/bruks.css
+++ b/bruks/bruks.css
@@ -85,3 +85,7 @@ e, .m0, .m1, .m2, .m3, .m4, .m5, .m6, .m7, .m8, .m9 {
 	border-top: 1px dashed gray;
 	margin: 0;
 }
+
+.green {
+	color: green;
+}
